--- a/client/src/components/UI/Button/Button.module.css
+++ b/client/src/components/UI/Button/Button.module.css
@@ -1,12 +1,12 @@
-.button {
+button {
   color: black;
   padding: 0.5rem 1.5rem;
   background-color: var(--main-color);
   border-radius: 0.2rem;
   font-weight: 600;
 }
-.button:hover,
-.button:focus {
+button:hover,
+button:focus {
   color: white;
   background-color: black;
   transition: 0.2s ease-in-out;
