--- a/client/src/pages/Login/Login.module.css
+++ b/client/src/pages/Login/Login.module.css
@@ -1,29 +1,30 @@
-.login-block {
-  float: left;
-  width: 100%;
+.register-block {
   padding: 50px 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-  background: #d3d3d3;
+  background: #eba364;
   border-radius: 10px;
-  width: 40%;
-  height: 40%;
 }
 
-.login-sec {
+.container .register-sec {
   padding: 50px 30px;
   position: relative;
 }
 
-.login-sec h2 {
+.register-sec h2 {
   margin-bottom: 30px;
   font-weight: 800;
   font-size: 30px;
   color: #0069c0;
 }
 
-.login-sec h2:after {
+.register-sec h2:after {
   content: " ";
   width: 100px;
   height: 5px;
