--- a/client/src/pages/Register/Register.css
+++ b/client/src/pages/Register/Register.css
@@ -1,17 +1,19 @@
 .register-block {
-  float: left;
   width: 100%;
   padding: 50px 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-  background: #d3d3d3;
+  background: #eba364;
   border-radius: 10px;
-  width: 40%;
-  height: 40%;
 }
 
-.register-sec {
+.container .register-sec {
   padding: 50px 30px;
   position: relative;
 }
