--- a/client/src/components/UI/Spinner/SpinnerLoader.module.css
+++ b/client/src/components/UI/Spinner/SpinnerLoader.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: 45;
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   top: 0;
   left: 0;
   background-image: linear-gradient(
